added from vs code

--- a/index.html
+++ b/index.html
@@ -10,6 +10,5 @@
     <p> first par </p>
     <p> this is another paragraph XD</p>
     
-    <p> this is a paragraph</p>
-</body>
+    <p> this is a paragraph ko</body>
 </html>
